# TomsOldFMComposerReloaded

./: CMakeLists.txt  Makefile  README.md
assets/fm/instruments/: alarm001.fmi  alien01.fmi  alien03.fmi  banjo01.fmi  basdrum1.fmi  basdrum2.fmi  basdrum4.fmi  bell.fmi  default.fmi  drum01.fmi  floete02.fmi  floete1.fmi  guitar01.fmi  hihat.fmi  knack01.fmi  knack02.fmi  langsam1.fmi  langsam2.fmi  langsam3.fmi  meer001.fmi  meer002.fmi  pacman01.fmi  rauschen.fmi  snare001.fmi  strings.fmi  summs01.fmi  synt3.fmi  synt4.fmi  sysn1.fmi  tuba001.fmi  tuba003.fmi  ufo1.fmi  underwor.fmi
assets/fm/songs/: test.fms
lib/opl/: OPL2Instruments.h  OplController.cpp  OplController.h  OplInterface.h  Tones.md
pascal/: README.MD
pascal/ADLIB/: ADLIBFM2.DOC  ALIEN02.FMI  ANZKEY.PAS  ASMTEST.PAS  ATTACKHY.FMS  AXELF.FMS  BASDRUM3.FMI  BLUBR.FMI  BOOM.FMI  CBREAK.FMS  COMP31.PAS  COMP32.PAS  COMP33.PAS  COMPOSE2.PAS  COMPOSE3.PAS  COMPOSER.PAS  COSTEREO.PAS  DEMO.PAS  DETECT.PAS  EFFEKT01.FMI  ENDCHEN.FMS  FLOETE03.FMI  FM-DEV.DOC  FMSHARE.PAS  FMSHARE.TPU  FMSTEREO.PAS  FMSTEREO.TPU  FMTEST.PAS  FMTEST.TPU  FMTPU.PAS  FMTPU.TPU  FULLHOUS.FMS  FULL_LIB.002  HANIBALL.FMI  HIHIT099.FMI  HOCH.PAS  HOCHDR??.FMI  HOCHTEST.PAS  HOCHTEST.PIF  IGEN31.PAS  (+59 more)
pascal/include/: UTILS.PAS
src/: editorGui.cpp  editorGui.h  fluxComposer.h  fluxEditorGlobals.h  fluxEditorMain.h  fluxEditorOplController.h  fluxFMEditor.h  fluxSfxEditor.h  main.cpp
